--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -90,6 +90,7 @@ jobs:
 
       - name: Prepare manifests
         run: |
+          sed -i "s/{{NAMESPACE}}/$NAMESPACE/g" infra/deployment.yaml
           sed -i "s/{{CUSTOMER_SLUG}}/$NAMESPACE/g" infra/deployment.yaml
           sed -i "s/{{CUSTOMER_ID}}/${NAMESPACE}/g" infra/deployment.yaml
 
