--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "dependencies": {
     "@react-router/node": "^7.13.0",
     "@react-router/serve": "^7.13.0",
-    "framer-motion": "^12.34.2",
+    "clsx": "^2.1.1",
+    "framer-motion": "^12.34.3",
     "isbot": "^5.1.35",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
-    "react-router": "^7.13.0"
+    "react-router": "^7.13.0",
+    "tailwind-merge": "^3.5.0"
   },
   "devDependencies": {
     "@react-router/dev": "^7.13.0",
